Fix logic of nested loop and create grid
Added a for loop that is nested within each iteration of the 'row' loop. The new loop
iterates through each row and adds the number of boxes = to 'answer. Using 'j' instead of 'i',
as a new variable, is what provided the key to getting the second loop to work. Currently
trying to deal with the issue of box overlap in the grid

--- a/styles.css
+++ b/styles.css
@@ -5,20 +5,21 @@
     height: 100%;
 } 
 
-/* .box {
-    display: flex;
+.box {
+    display: inline-block;
     width: 100%;
     height: 50px;
     border: 2px solid limegreen;
     padding: 4px;
-} */
+}
 
 .row {
     display: flex;
+    margin: 0px;
     width: 100%;
-    height: 50px;
-    border: 2px solid limegreen;
-    padding: 4px;
+    height: 100px;
+    /* border: 2px solid limegreen;
+    padding: 4px; */
 }
 
 
